Implementando autorizacao e geracao do token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.sender=everton10alves@gmail.com
 default.recipient=everton10alves@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarTolken
+jwt.expiration=60000
