--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=everton10alves@gmail.com
 default.recipient=everton10alves@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarTolken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-ionic-udemy
+s3.region=sa-east-1
